isEqualNode for doctype